Added Danish in the placeholder text too

--- a/Campingplads registrering.html
+++ b/Campingplads registrering.html
@@ -132,7 +132,7 @@ button {
                         Fornavne og mellemnavne: /
                         First and middle names:
                     </td>
-                    <td><input type="text" id="FirstNameInput" placeholder="First and middle names"></td>
+                    <td><input type="text" id="FirstNameInput" placeholder="Fornavne og mellemnavne: / First and middle names:"></td>
                     <td> <p id="FirstNameInputHelpText"> </td>
                 </tr>
 
@@ -141,7 +141,7 @@ button {
                         Efternavne: /
                         Last names:
                     </td>
-                    <td><input type="text" id="LastNameInput" placeholder="Last names"></td>
+                    <td><input type="text" id="LastNameInput" placeholder="Efternavne: / Last names:"></td>
                     <td> <p id="LastNameInputHelpText"> </td>
                 </tr>
 
@@ -149,16 +149,16 @@ button {
                     <td>Vejnavn og nummer /
                         Street name and number:
                     </td>
-                    <td><input type="text" id="StreetInput" placeholder="Street name and number"></td>
+                    <td><input type="text" id="StreetInput" placeholder="Vejnavn og nummer / Street name and number:"></td>
                     <td> <p id="StreetInputHelpText"> </td>
                 </tr>
 
                 <tr>
                     <td>
-                        Spostnummer /
+                        Postnummer /
                         Zipcode:
                     </td>
-                    <td><input type="text" id="ZipcodeInput" placeholder="Zipcode"></td>
+                    <td><input type="text" id="ZipcodeInput" placeholder="Postnummer / Zipcode:"></td>
                     <td> <p id="ZipcodeInputHelpText"> </td>
                 </tr>
 
@@ -167,7 +167,7 @@ button {
                         By /
                         Town:
                     </td>
-                    <td><input type="text" id="TownInput" placeholder="Town"></td>
+                    <td><input type="text" id="TownInput" placeholder="By / Town:"></td>
                     <td> <p id="TownInputHelpText"> </td>
                 </tr>
 
@@ -176,7 +176,7 @@ button {
                         Nationalitet /
                         Nationality:
                     </td>
-                    <td><input type="text" id="NationalityInput" placeholder="Nationality"></td>
+                    <td><input type="text" id="NationalityInput" placeholder="Nationalitet / Nationality:"></td>
                     <td> <p id="NationalityInputHelpText"> </td>
                 </tr>
 
@@ -185,7 +185,7 @@ button {
                         Antal voksne: /
                         Number of adults:
                     </td>
-                    <td><input type="text" id="AdultsInput" placeholder="Number of Adults"></td>
+                    <td><input type="text" id="AdultsInput" placeholder="Antal voksne: / Number of adults:"></td>
                     <td> <p id="AdultsInputHelpText"> </td>
                 </tr>
 
@@ -194,12 +194,12 @@ button {
                         Antal Børn: /
                         Number of Children:
                     </td>
-                    <td><input type="text" id="ChildrenInput" placeholder="Number of Children"></td>
+                    <td><input type="text" id="ChildrenInput" placeholder="Antal Børn: / Number of Children:"></td>
                     <td> <p id="ChildrenInputHelpText"> </td>
                 </tr>
 
                 <tr>
-                    <td><button id="SaveButton">Save</button></td>
+                    <td><button id="SaveButton">Gem / Save</button></td>
                 </tr>
 
             </table>
