Changed the British saved letters from EN to UK

--- a/Campingplads registrering.html
+++ b/Campingplads registrering.html
@@ -515,10 +515,13 @@ button {
             else if
             (
                 nationalityInput.toUpperCase === "ENGLISH" ||
+                nationalityInput.toUpperCase === "BRITISH" ||
+                nationalityInput.toUpperCase === "SCOTTISH" ||
                 nationalityInput.toUpperCase === "ENG"
+
             )
             {
-                nationalityInput = "EN";
+                nationalityInput = "UK";
             }
             else if
             (
